--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/edit.js"></script>
         <script src="scripts/directives/read-file.js"></script>
         <!-- endbuild -->
 </body>
