--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
+              <li class="active"><a href="#/map">Map</a></li>
             </ul>
           </div>
         </div>
