--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li class="active"><a href="#/map">Map</a></li>
+              <li><a href="#/add">Add manual contact</a></li>
             </ul>
           </div>
         </div>
