--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
         <script src="scripts/controllers/edit.js"></script>
         <script src="scripts/directives/read-file.js"></script>
         <script src="scripts/factories/contacts.js"></script>
+        <script src="scripts/factories/geocoder.js"></script>
         <!-- endbuild -->
 </body>
 </html>
