--- a/app/index.html
+++ b/app/index.html
@@ -71,16 +71,17 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.js"></script>
-    <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
-    <script src="bower_components/lodash/lodash.js"></script>
-    <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+    <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <script src="http://maps.google.com/maps/api/js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/add.js"></script>
+        <script src="scripts/controllers/map.js"></script>
         <script src="scripts/controllers/edit.js"></script>
         <script src="scripts/directives/read-file.js"></script>
         <script src="scripts/factories/contacts.js"></script>
