--- a/app/index.html
+++ b/app/index.html
@@ -39,8 +39,8 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li class="active"><a href="#/map">Map</a></li>
+              <li><a href="#/">Home</a></li>
+              <li><a href="#/map">Map</a></li>
               <li><a href="#/add">Add manual contact</a></li>
             </ul>
           </div>
